# FaceDetectAlg

./: CMakeLists.txt  Hifd.h  HifdTypes.h  android_make.sh  facedetector_types.h  library.cpp  main.cpp
build_android/: CMakeCache.txt  Makefile  cmake_install.cmake
facedetector_haar/: facedetector_haar.cpp  facedetector_haar.h
libopencv4android/opencv2/contrib/: contrib.hpp  retina.hpp
